# tuma-server/src/api_doc.rs
@@ -11,6 +11,7 @@ use utoipa::OpenApi;
         crate::routes::health_check,
         crate::routes::openapi_json,
         crate::routes::me::me,
+        crate::routes::me::update_me,
         crate::routes::auth::otp_request,
         crate::routes::auth::otp_verify,
         crate::routes::auth::logout,
